--- a/index.html
+++ b/index.html
@@ -200,5 +200,18 @@
       }
     });
   </script>
+  <!-- Görsel Büyütme Modalı -->
+<div
+  id="image-modal"
+  class="hidden fixed inset-0 bg-black/70 backdrop-blur-sm flex items-center justify-center z-50"
+>
+  <img
+    id="modal-image"
+    src=""
+    alt="Büyük Görsel"
+    class="max-w-3xl max-h-[80vh] rounded shadow-xl border-4 border-white"
+  />
+</div>
+
 </body>
 </html>
